# sayswho-cjj

./: .gitignore  README.md  article_code.py  article_template.html  control_data.txt  filtered_article_index_030923.csv  pyproject.toml  quote error tests.txt  quote_finder_for_tests.txt  requirements.txt  textacy_annotator.py  wagner_helpers.py  whitespace_runs_for_testing.txt
good_results_output/: sayswho_test_run_errors.text  sayswho_test_runs.txt  scripto.py
old/: sayswho.py
sayswho/: article_helpers.py  attribution_helpers.py  constants.py  qtok_breakout.py  quote_helpers.py  quotes.py  rendering_helpers.py  sayswho.py  sayswho_crfe.py  textacy_annotator.py  textacy_boot_helpers.py  textacy_bootleg.py
tests/: quote_error_tests.txt  test_qa.py  test_quote_finder.py  test_saved_files.py
