[tool.poetry]
name = "sayswho"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.5.2"
spacy-transformers = "^1.2.3"
tqdm = "^4.65.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
