[tool.poetry]
name = "sayswho"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "<3.5"
tqdm = "^4.65.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
pytest = "^7.3.1"
pandas = "^2.0.1"
bs4 = "^0.0.1"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
