[tool.poetry]
name = "sayswho"
version = "0.1.0"
description = ""
authors = ["Andrew Friedman <afriedman412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "<3.5"
tqdm = "^4.65.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
pytest = "^7.3.1"
pandas = "^2.0.1"
bs4 = "^0.0.1"
python-levenshtein = "^0.21.0"
regex = "^2023.5.5"
rapidfuzz = "^3.0.0"
en_core_web_trf = {url = "https://github.com/explosion/spacy-experimental/releases/download/v0.6.1/en_coreference_web_trf-3.4.0a2-py3-none-any.whl"}
en_core_web_lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
